Fixed alignment of webpage, added reflexiveness to website so that alignment is in order when on mobile or resizing page. Added logo for name in navigation bar. Added about and background information

--- a/indexStyles.css
+++ b/indexStyles.css
@@ -3,50 +3,55 @@
 body {
     background-color: rgb(45, 37, 61);
     margin: 0px;
-    flex: 1;
 }
 
 /*Top border page of site*/
 .headers {
     
     display: flex;
-    background: rgb(56, 56, 56);
+    background: #383838;
     min-height: 80px;
     justify-content: space-between; /*Space between Title and Subheaders*/
-    min-width: max-content;
+    min-width: 600px;
+    gap: 40px;
+    flex-wrap: wrap;
     
 }
 
 .headers div{
-    color: rgb(250, 28, 139);
+    color: #fa1c8b;
     font-family: 'Roboto', sans-serif;
+    
     
 }
 
 /* Title name Aron-Dante*/
 #title {
-    display: flex;
+    
 
     line-height: 80px; /* Brings Arron-Dante Down inside box by 80px */
     
     margin-left: 20px; /* Spaces Arron-Dante from Border 20px */
 
-    font-size: 20px;
+    width: 120px;
+    height: auto;
 }   
 
 /* Subheaders container*/
 .subHeaders {
     display: flex;
+    gap: 50px; /* gap between subheader boxes*/
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    min-width: 600px;
     
-    gap: 70px; /* gap between subheader boxes*/
-    margin-right: 20px;
     
 }
 
 /* Subheaders text and content*/
 .subHeaders div {
     line-height: 80px;
-    
     font-size: 20px;
 }
 
@@ -56,24 +61,34 @@ body {
 
     display: flex;
     margin-top: 30px;
+    margin-bottom: 30px;
     flex-direction: row-reverse;
-    justify-content: space-between;
-    gap: 40px;
-
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    flex-wrap: wrap;
+    min-width: 600px;
+    
 
 }
+
 
 /*Styling for Profile Picture*/
-.pfp{
-    margin-right: 300px;
-    border-radius: 12px;
 
+.pfp{ /*Image container*/
+    border-radius: 12px;
+    max-width: 600px;
+    width: 100%;
+    
+    
 }
 
-#profilePic {
-    width: 600px;
+#profilePic { /*image*/
+    width: 100%;
     height: auto;
     border-radius: 40px;
+    flex-shrink: 1;
+    display: block;
 }
 
 
@@ -82,27 +97,27 @@ body {
 .landingText{
     display: flex;
     justify-content: center;
-    gap: 10px;
+    gap: 5px;
     flex-direction: column;
     font-family: 'Roboto', sans-serif;
     color: white;
-    margin-left: 400px;
     align-items: center;
 
 }
 
 
-.intro {
+#intro {
     font-size: 70px;
+    text-align: center;
 }
 
-.subIntro {
+#subIntro {
     font-size: 20px;
 
 }
 
 /*The Hire Me Button*/
-.hireButton{
+#hireButton{
 
     font-size: 20px;
     padding: 20px;
@@ -112,4 +127,52 @@ body {
 
 }
 
+
+/*About Page*/
+
+.aboutPage {
+
+    display: flex;
+    background: #383838;
+    font-family: 'Roboto', sans-serif;
+    color: rgb(250, 28, 139);
+    justify-content: center;
+    gap: 100px;
+    min-height: 1000px;
+    align-items: center;
+    flex-direction: row-reverse;
+    min-width: 600px;
+    flex-wrap: wrap;
+    
+}
+
+
+.bio {
+    display: flex;
+    flex-direction: column;
+    min-width: 400px;
+
+}
+
+.aboutTitle {
+    font-size: 70px;
+}
+
+.aboutPar {
+    display: flex;
+    font-size: 25px;
+}
+
+.aboutPar p {
+    color: white;
+    flex: 0 0 600px;
+
+}
+
+#secPfp {
+
+    width: 500px;
+    height: auto;
+    border-radius: 50px
+}
 
